plugins {
  id 'java'
}
apply plugin: 'maven-publish'

sourceSets.main.java.srcDirs = ["src/main/java"]
sourceSets.test.java.srcDirs = ["src/test/java"]

group = 'com.github.EB-wilson'

sourceCompatibility = 16
targetCompatibility = 16

repositories {
  mavenCentral()
  maven{ url 'https://www.jitpack.io' }
}

publishing {
  publications {
    maven(MavenPublication) {
      groupId = 'com.github.EB-wilson.JavaDynamilizer'
      artifactId = 'baseimpl'
      version = "$JDERVersion"
      from components.java
    }
  }
}

dependencies {
  compileOnly project(":core")

  annotationProcessor 'com.github.EB-wilson.UniverseCore:annotations:1.8.4'
}

tasks.withType(JavaCompile) {
  sourceCompatibility = 9
  targetCompatibility = 9

  options.compilerArgs.addAll([
      "--add-exports", "java.base/jdk.internal.misc=ALL-UNNAMED"
  ])
}
